# generic-etl

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: impl-status.md  new-agent.md  new-connector.md  new-transform.md  run-demo.md
.github/: copilot-instructions.md
agent/: CLAUDE.md  __init__.py  cli.py
agent/generator/: __init__.py  yaml_generator.py
agent/ir/: __init__.py  schema.py
agent/parser/: __init__.py  informatica_xml.py
agent/translator/: __init__.py  expressions.py  llm_fallback.py
docs/: README.md  architecture.md  migration-strategy.md  transformation-mapping-guide.md
docs/adr/: ADR-001-python-pandas.md  ADR-002-sqlite-source-target.md  ADR-003-yaml-config.md  ADR-004-plugin-pattern.md  ADR-005-ir-json.md  ADR-006-pytest-coverage.md  ADR-007-entry-point-registry.md
docs/architecture/: 01-architecture-overview.md  02-scalability.md  03-security.md  04-extensibility.md  05-cost-model.md  06-observability.md  07-roadmap-18m.md  08-migration-playbook.md
docs/brainstorming/: README.md  adf-parser-yaml-fixes.md  adf-real-world-fixes.md  adf-support-file-parser.md  canonical-taxonomy.md  control-table-and-framework-v2.md  enterprise-architecture-diagram.md  enterprise-hardening-plan.md  etl-cost-comparison.md  etl-framework-implementation-plan.md  etl-migration-proposal.md  etl-one-pager.tsx  executive-presentation.tsx  framework-hardening-plan.md  high-level-design.md  how-to-proceed.md  (+7 more)
framework/: CLAUDE.md  __init__.py  runner.py
sample_data/: expected_output.csv  load_sample_data.py
sample_informatica/: m_LOAD_CUSTOMERS.xml
tests/: test_agent.py  test_end_to_end.py  test_framework.py
(+16 files in other folders)
